Fixed alignment problems and cleaned up

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ margin-top: -4rem;
   padding: 1rem;
 }
 
+
 /*-------------------------- Navigation */
 
 .navbar {
@@ -163,7 +164,8 @@ blockquote {
 
 .jumbotron {
   margin-bottom: 0;
-  padding: 2rem 0 1rem;
+  margin-top: 0;
+  padding: 0 1rem 0 1rem;
   border-radius: 0;
   width: 100%;
 }
@@ -187,7 +189,8 @@ audio {
 .dark {
   background-color: rgba(0,0,0,.7);
   color: white;
-  padding: 7rem 2rem;
+  margin: 0 auto;
+  padding-top: 2rem;
 }
 
 .bit-top-track-button {
@@ -253,9 +256,6 @@ margin-bottom: 2rem;
 
 /*------------------ Contact Section */
 
-.contact {
-  margin-top: 5rem;
-}
 
 .btn-outline-primary {
   border-width: medium;
